--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="logo">Hanger</div>
-        <ul>
+        <ul class="links">
             <li><a href="#" id="home-btn">Home</a></li>
             <li><a href="#" id="buy-btn">Buy</a></li>
             <li><a href="#" id="sell-btn">Sell</a></li>
@@ -41,29 +41,20 @@
             <h2>Featured Items</h2>
             <div class="featured-list">
                 <div class="featured-item">
-                    <img src="featured1.jpg" alt="Trendy Jacket">
+                    <img src="img/menjack.jpg" alt="Trendy Jacket">
                     <p>Men's Leather Jacket - ₹2500</p>
                 </div>
                 <div class="featured-item">
-                    <img src="featured2.jpg" alt="Designer Dress">
+                    <img src="img/etf.png" alt="Designer Dress">
                     <p>Women's Designer Dress - ₹3000</p>
                 </div>
                 <div class="featured-item">
-                    <img src="featured3.jpg" alt="Kids Sweater">
+                    <img src="img/kidf.png" alt="Kids Sweater">
                     <p>Kids' Winter Sweater - ₹1200</p>
                 </div>
             </div>
         </section>
 
-        <!-- Trending Categories -->
-        <section id="trending-categories">
-            <h2>Trending Categories</h2>
-            <div class="category-list">
-                <a href="#" class="category" data-category="men">Men's Wear</a>
-                <a href="#" class="category" data-category="women">Women's Wear</a>
-                <a href="#" class="category" data-category="kids">Kids' Wear</a>
-            </div>
-        </section>
 
         <!-- Customer Testimonials -->
         <section id="testimonials">
@@ -108,31 +99,31 @@
         <div id="clothes-list">
             <!-- Men's Wear -->
             <div class="clothing-item" data-gender="men" data-price="1500" data-type="thrift">
-                <img src="mens_jacket.jpg" alt="Men's Jacket">
+                <img src="img/menjack.jpg" alt="Men's Jacket">
                 <p>Men's Leather Jacket - ₹1500 (Thrift)</p>
             </div>
             <div class="clothing-item" data-gender="men" data-price="1800" data-type="rent">
-                <img src="mens_tshirt.jpg" alt="Men's T-Shirt">
+                <img src="img/menf.png" alt="Men's T-Shirt">
                 <p>Men's Casual T-Shirt - ₹1800 (Rent)</p>
             </div>
         
             <!-- Women's Wear -->
             <div class="clothing-item" data-gender="women" data-price="800" data-type="rent">
-                <img src="womens_dress.jpg" alt="Women's Dress">
+                <img src="img/etf.png" alt="Women's Dress">
                 <p>Women's Floral Dress - ₹800 (Rent)</p>
             </div>
             <div class="clothing-item" data-gender="women" data-price="1200" data-type="thrift">
-                <img src="womens_jacket.jpg" alt="Women's Jacket">
-                <p>Women's Winter Jacket - ₹1200 (Thrift)</p>
+                <img src="img/womsk.avif" alt="Women's Jacket">
+                <p>Women's Skirt - ₹1200 (Thrift)</p>
             </div>
         
             <!-- Kids' Wear -->
             <div class="clothing-item" data-gender="kids" data-price="900" data-type="thrift">
-                <img src="kids_shirt.jpg" alt="Kids Shirt">
+                <img src="img/wef.png" alt="Kids Shirt">
                 <p>Kids' Cotton Shirt - ₹900 (Thrift)</p>
             </div>
             <div class="clothing-item" data-gender="kids" data-price="700" data-type="rent">
-                <img src="kids_dress.jpg" alt="Kids Dress">
+                <img src="img/Depop Unisex Dress $9_00.jpg" alt="Kids Dress">
                 <p>Kids' Party Dress - ₹700 (Rent)</p>
             </div>
         </div>
@@ -243,4 +234,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
